--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <link rel="shortcut icon" type="image/x-icon" href="http://cdn.willigant.com/static/favicons/willigant.ico" />
-<link href="resources/css/master.xcss" rel="stylesheet" type="text/css" />
+<link href="resources/css/master.css" rel="stylesheet" type="text/css" />
 <!--[if lte IE 6]>
     <link href="/resources/css/ie6.xcss" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="/resources/css/pngFix/iepngfix_tilebg.js"></script>  
